# rocket_diesel_curd

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-07-14-051627_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  routers.rs  schema.rs  views.rs
templates/: home.html.hbs  index.html.hbs
templates/user/: login.html.hbs  register.html.hbs
