[package]
name = "rocket_user"
version = "0.1.0"
edition = "2021"
[build-dependencies]
[dependencies]
rocket = "0.5.0"
bcrypt = "0.15.1"
rocket_dyn_templates = {version="0.2.0",features = ["handlebars","tera"]}
diesel = { version = "2.2.1", features = ["mysql","chrono"] }
dotenv = "0.15.0"
mysqlclient-sys = "0.4.0"
chrono= "0.4.19"
regex = "1.5.4"
dotenvy="0.15.7"